--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <body>
     <h1>Hello, World</h1>
     <p>Call me Ntwali</p>
+    <img src="images/breaching_whale.jpg" alt="Breaching whale photo">
   </body>
 </html>
