--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>A Whale of Greeting</title>
   </head>
   <body>
     <h1>Hello, World</h1>
+    <a href="about.html">About this project</a>
     <p>Call me Ntwali</p>
     <img src="images/breaching_whale.jpg" alt="Breaching whale photo">
   </body>
