--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>About Us</h1>
-    <p>This site is a sample project for the <strong> awaresome </strong> Git tutorial <em> Learn Enough TM Git to be Dangerous</em>.</p>
+    <p>This site is a sample project for the <strong> awaresome </strong> Git tutorial <a href="https://www.learnenough.com/git-tutorial"> <em> Learn Enough TM Git to be Dangerous</em></a>.</p>
     <img src="images/breaching_whale.jpg" alt="Breaching whale photo">
   </body>
 </html>
