--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <h1>Hello, World</h1>
     <a href="about.html">About this project</a>
     <p>Call me Ntwali</p>
+    <a href="https://www.flickr.com/photos/28883788@N04/10097824543">
     <img src="images/breaching_whale.jpg" alt="Breaching whale photo">
+  </a>
   </body>
 </html>
