Add an alt attribute

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <a href="about.html">About this project</a>
     <p>Call me Ntwali</p>
     <a href="https://www.flickr.com/photos/28883788@N04/10097824543">
-    <img src="images/breaching_whale.jpg" alt="Breaching whale photo">
+    <img src="images/breaching_whale.jpg" alt=" Whale photo">
   </a>
   </body>
 </html>
