Add placeholders for the TM fix

--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>All About Us</title>
+    <!-- Add somthing here to fix Trademark-->
   </head>
   <body>
     <h1>About Us</h1>
