--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>A Whale of Greeting</title>
+    <!-- Add something Here to fix Trademark-->
   </head>
   <body>
     <h1>Hello, World</h1>
